<?xml version="1.0"?>
<package>
  <name>tnp_serial_com</name>
  <version>2017.7.31</version>
  <description>The tnp_serial_com package</description>

  <maintainer email="toyoshima.kenta.th2@is.naist.jp">Kenta Toyoshima</maintainer>

  <license>ALv2</license>

  <url type="website">http://robotics.naist.jp/team-naist-panasonic</url>
  
  <author email="toyoshima.kenta.th2@is.naist.jp">Kenta Toyoshima</author>
  <author email="okazaki.yasunao@jp.panasonic.com">Yasunao Okazaki</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
