<?xml version="1.0"?>
<package>
  <name>tnp_svm</name>
  <version>2017.7.31</version>
  <description>The tnp_svm package</description>

  <maintainer email="marcus.gall.lw3@is.naist.jp">Marcus Gall</maintainer>

  <license>ALv2</license>

  <url type="website">http://robotics.naist.jp/team-naist-panasonic</url>
  
  <author email="marcus.gall.lw3@is.naist.jp">Marcus Gall</author>
  <author email="arnaud.delmotte.zr3@is.naist.jp">Arnaud Delmotte</author>
  <author email="kcy.komayang@gmail.com">Pin-Chu Yang</author>
  <author email="felix.von_drigalski.fp6@is.naist.jp">Felix von Drigalski</author>
  <author email="okada.seigo@jp.panasonic.com">Seigo Okada</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
