<?xml version="1.0"?>
<package>
  <name>tnp_task_manager</name>
  <version>2017.7.31</version>
  <description>The tnp_task_manager package to coordinate both tasks of the ARC 2017</description>

  <maintainer email="rodrigo.elizalde.qy5@is.naist.jp">Rodrigo Elizalde</maintainer>  

  <license>ALv2</license>

  <url type="website">http://robotics.naist.jp/team-naist-panasonic</url>
  
  <author email="rodrigo.elizalde.qy5@is.naist.jp">Rodrigo Elizalde</author>  
  <author email="garcia-g@is.naist.jp">Gustavo Garcia</author>
  <author email="felix.von_drigalski.fp6@is.naist.jp">Felix von Drigalski</author>
  <author email="pedro.uriguen.pl3@is.naist.jp">Pedro Uriguen</author>
  <author email="lotfi.elhafi@gmail.com">Lotfi El Hafi</author>
  <author email="marcus.gall.lw3@is.naist.jp">Marcus Gall</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Team NAIST-Panasonic dependencies -->
  <build_depend>tnp_kuka_motion</build_depend>
  <build_depend>tnp_end_effector</build_depend>
  <build_depend>tnp_weight_events</build_depend>
  <build_depend>tnp_recognition_space</build_depend>
  <build_depend>tnp_feat_vision</build_depend>
  <build_depend>tnp_grasp_planner</build_depend>
  <build_depend>tnp_led_control</build_depend>
  <build_depend>tnp_msgs</build_depend>
  <build_depend>tnp_motion_planner</build_depend>
  <build_depend>tnp_svm</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Team NAIST-Panasonic dependencies -->
  <run_depend>tnp_end_effector</run_depend>
  <run_depend>tnp_feat_vision</run_depend>
  <run_depend>tnp_kuka_motion</run_depend>
  <run_depend>tnp_recognition_space</run_depend>
  <run_depend>tnp_weight_events</run_depend>
  <run_depend>tnp_grasp_planner</run_depend>
  <run_depend>tnp_deep_vision</run_depend>
  <run_depend>tnp_led_control</run_depend>
  <run_depend>tnp_msgs</run_depend>
  <run_depend>tnp_motion_planner</run_depend>
  <run_depend>tnp_svm</run_depend>

  <export>
  </export>
</package>
